<resources>
    <string name="app_name">Worktask 1.0</string>
    <string name="title">Write meeting minutes</string>
    <string name="done">Done</string>
    <string name="hint_title">Enter title</string>
    <string name="hint_description">Enter descriptions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_status">Set Status</string>
    <string name="empty_title">Empty Title</string>
    <string name="set_status_date">Set Date</string>
    <string name="set_status_time">Set Time</string>
    <string name="startdate">8:30 27/07/2016 - </string>
    <string name="duedate">10:00 27/07/2016</string>
    <string name="status">Normal</string>
    <string name="status_new">New</string>
    <string name="status_impogress">Impogress</string>
    <string name="status_resolved">Resolved</string>
    <string name="status_closed">Closed</string>
    <string name="writing_testplan">Writing Testplan</string>
    <string name="title_add">Title</string>
    <string name="startdate_add">Start Date \u0020</string>
    <string name="duedate_add">Due Date \u0020</string>
    <string name="description_add">Description \u0020 </string>
    <string name="estimate_add">Estimate Hours \u0020</string>
    <string name="hours_add">Hours</string>
    <string name="priority_add">Priority \u0020</string>
    <string name="status_add">Status \u0020</string>
    <string name="add_task_success">Add task success!</string>
    <string name="add_task_false">Add task false!</string>
    <string name="edit_task">Edit task success!</string>
    <string name="warning">There are more than 32 hours free from start date</string>
    <string name="mode">mode</string>
    <string name="createtime">time</string>
    <string name="id">id</string>
    <string name="delete">Delete task</string>
    <string name="delete_confirm">Are you sure to delete this task?</string>
    <string name="date">dd/MM/yyyy</string>
    <string name="time">HH:mm</string>
    <string name="time_sec">HH:mm:ss</string>


    <string name="empty_title_validate">Title is empty !</string>
    <string name="empty_start_time_validate">Start time is empty !</string>
    <string name="empty_start_date_validate">Start date is empty !</string>
    <string name="empty_due_time_validate">Due time is empty !</string>
    <string name="empty_due_date_validate">Due date is empty !</string>
    <string name="empty_field_validate">Empty fields !</string>
    <string name="empty_field_estimate">Estimate is empty !</string>
    <string name="duplicated_task">Duplicated task !</string>
    <string name="duplicated_time">Duplicated another task time!</string>
    <string name="validate_description">Description too long!</string>
    <string name="choose_time">Choose diffrent time</string>
    <string name="time_equal">Due time must be more than start time 30 minutes !</string>
    <string name="time_conflict">Time conflict !</string>
    <string name="date_conflict">Date conflict !</string>

    <string name="description">-App helps to view tasks with priorities and time constraints for the app’s owner A task is shown its information as title, priority, estimate hours, start date, due date, description, status. \n
-App can add and edit a task. \n
-App can insert a task and time constraints with others are still correct. \n
</string>
    <string name="priority">Low</string>
    <string name="startdate_detail">09:40 20/08/2016</string>
    <string name="duedate_detail">10:10 20/08/2016</string>
    <string name="estimate">30 minutes</string>
    <string name="status_detail">New</string>

    <string-array name="priority">
        <item>Normal</item>
        <item>Low</item>
        <item>High</item>
        <item>Immediate</item>
    </string-array>

    <string-array name="status">
        <item>New</item>
        <item>Inprogress</item>
        <item>Resolved</item>
        <item>Closed</item>
    </string-array>

    <string-array name="mode">
        <item>Preview</item>
        <item>Add</item>
        <item>Edit</item>
        <item>Create</item>
    </string-array>

    <string-array name="header">
        <item>Detail</item>
        <item>Add new task</item>
        <item>Edit task</item>
    </string-array>

    <string-array name="warning">
        <item>There are more than 32 hours free from start date</item>
        <item>There are </item>
        <item> hours free from start date</item>
        <item> minutes free from start date</item>
        <item>There is no time free from start date</item>
    </string-array>

</resources>
