<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/color_background">

    <LinearLayout
        android:id="@+id/layout_add_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_view_back_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/text_view_header_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image_view_back"
                android:ellipsize="start"
                android:singleLine="true"
                android:text="@string/writing_testplan"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8dp"
            android:layout_weight="0.02"
            android:paddingLeft="@dimen/_10dp"
            android:text="@string/done"
            android:textColor="@color/color_done"
            android:textSize="@dimen/_20sp"
            android:textStyle="normal"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0.5dp"
        android:layout_below="@+id/layout_add_header"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_divider">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16dp">

            <TextView
                android:id="@+id/text_view_description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_description_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_description_detail"
                android:padding="@dimen/_8dp"
                android:text="@string/description"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_14dp" />

            <TextView
                android:id="@+id/text_view_priority_detail"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_description_content"
                android:text="@string/priority_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_priority_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_description_content"
                android:layout_toRightOf="@+id/text_view_priority_detail"
                android:text="@string/priority"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp" />

            <TextView
                android:id="@+id/text_view_startdate_detail"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_priority_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/startdate_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_startdate_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_priority_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@id/text_view_startdate_detail"
                android:text="@string/startdate_detail"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp" />

            <TextView
                android:id="@+id/text_view_duedate_detail"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_startdate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/duedate_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_duedate_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_startdate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@id/text_view_duedate_detail"
                android:text="@string/duedate_detail"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp" />

            <TextView
                android:id="@+id/text_view_estimate_detail"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_duedate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/estimate_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_estimate_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_duedate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@id/text_view_estimate_detail"
                android:text="@string/estimate"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp" />

            <TextView
                android:id="@+id/text_view_status_detail"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_estimate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/status_add"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_view_status_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_estimate_detail"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@id/text_view_status_detail"
                android:text="@string/status_detail"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_15dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
