<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8dp">

    <LinearLayout
        android:id="@+id/layout_add_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/text_view_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image_view_back"
                android:text="@string/writing_testplan"
                android:textSize="@dimen/_20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="Done"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0.25dp"
        android:layout_below="@+id/layout_add_header"
        android:background="@color/color_Status_Closed"></RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_divider"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/title_add"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_divider"
            android:layout_toRightOf="@+id/text_view_title"
            android:layout_weight="0.9"
            android:background="@drawable/edt_box_title"
            android:paddingLeft="@dimen/_8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/description_add"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:layout_below="@+id/text_view_description"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/edt_box_description"
        android:gravity="start"
        android:padding="@dimen/_8dp" />

    <TextView
        android:id="@+id/text_view_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_description"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/priority_add"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_description"
        android:layout_marginLeft="@dimen/_60dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_toRightOf="@+id/text_view_priority"
        android:entries="@array/priority"></Spinner>

    <TextView
        android:id="@+id/text_view_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_priority"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:text="@string/startdate_add"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/layout_start_time"
        android:layout_width="@dimen/_72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_priority"
        android:layout_marginLeft="@dimen/_50dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_toRightOf="@+id/text_view_startdate">

        <EditText
            android:id="@+id/edit_text_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5dp"
            android:editable="false"
            android:background="@drawable/edt_box_title" />

        <ImageView
            android:id="@+id/image_view_time_start_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_start_date"
        android:layout_width="@dimen/_130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_priority"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_toRightOf="@+id/layout_start_time">

        <EditText
            android:id="@+id/edit_text_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5dp"
            android:editable="false"
            android:background="@drawable/edt_box_title" />

        <ImageView
            android:id="@+id/image_view_date_start_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_startdate"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:text="@string/duedate_add"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/layout_due_time"
        android:layout_width="@dimen/_72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_startdate"
        android:layout_marginLeft="@dimen/_56dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_toRightOf="@+id/text_view_duedate">

        <EditText
            android:id="@+id/edit_text_due_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5dp"
            android:editable="false"
            android:background="@drawable/edt_box_title" />

        <ImageView
            android:id="@+id/image_view_time_due_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_due_date"
        android:layout_width="@dimen/_130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_startdate"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_toRightOf="@+id/layout_due_time">

        <EditText
            android:id="@+id/edit_text_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5dp"
            android:editable="false"
            android:background="@drawable/edt_box_title" />

        <ImageView
            android:id="@+id/image_view_date_due_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_duedate"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:text="@string/estimate_add"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edit_text_estimate"
        android:layout_width="@dimen/_72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_duedate"
        android:layout_marginLeft="@dimen/_18dp"
        android:layout_marginTop="@dimen/_20dp"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:layout_toRightOf="@+id/text_view_estimate"
        android:background="@drawable/edt_box_title" />

    <TextView
        android:id="@+id/text_view_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_duedate"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_toRightOf="@+id/edit_text_estimate"
        android:text="@string/hours_add"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_estimate"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textStyle="italic" />
    </LinearLayout>


</RelativeLayout>